2008-01-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Renamed TextDocCol to Corpus, and Corpus to Content.

	* DESCRIPTION: Updated Version to 0.3 due to core name changes.

2008-01-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/meta.R (meta): New function for consistent access to meta data
	of document collections, repositories, and texts.

2008-01-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Better support for encodings.

2008-01-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (TextDocCol): Fixed bug regarding default reader
	selection when no reader argument is given.

2008-01-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/source.R (CSVSource): Now uses read.csv instead of scan
	internally.

2008-01-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (getReaders): Returns available reader functions.

	* R/termdocmatrix.R (TermDocMatrix): Set new modular constructor
	as default.

2007-12-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/stopwords.R (stopwords): Shortened code, removed codetools
	variable warnings.

	* man/: Documentation for showMeta, added an example for tmMap.

	* inst/doc/tm.Rnw: Updated vignette, comments on MS word reader,
	some minor typos fixed.

2007-12-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R (showMeta): Added method for pretty printing a
	text document's meta data.

2007-11-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (TextDocCol): Better handling of empty
	arguments.

	* NAMESPACE: Exported readDOC.

	* man/completeStems.Rd: Added an example.

2007-11-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/stopwords.R (stopwords): Look up .dat files at every
	call. Allows users to modify stopword .dat files interactively.

2007-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (termFreq): Correct processing of empty
	documents.

2007-10-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated documentation.
